--- a/hw02/animate.html
+++ b/hw02/animate.html
@@ -4,9 +4,10 @@
 			Animate!
 		</h1>
 		<button id="button">Circle</button>
-		<br>
-		<br>
-		<canvas id="playground" style="border:1px solid #000000;" height = "500" width = "500"></canvas>
-		<script src="animate.js"></script>
+		<button id="stop">Stop</button>
+			<br>
+			<br>
+			<canvas id="playground" style="border:1px solid #000000;" height = "500" width = "500"></canvas>
+			<script src="animate.js"></script>
 	</center>
 </html>
