--- a/hw02/animate.html
+++ b/hw02/animate.html
@@ -5,9 +5,8 @@
 		</h1>
 		<button id="button">Circle</button>
 		<button id="stop">Stop</button>
-			<br>
-			<br>
-			<canvas id="playground" style="border:1px solid #000000;" height = "500" width = "500"></canvas>
-			<script src="animate.js"></script>
+		<h3 id="message">Press CIRCLE to begin animation!</h3>
+		<canvas id="playground" style="border:1px solid #000000;" height = "500" width = "500"></canvas>
+		<script src="animate.js"></script>
 	</center>
 </html>
