--- a/hw03/animate.html
+++ b/hw03/animate.html
@@ -3,9 +3,11 @@
 		<h1>
 			Animate!
 		</h1>
-		<button id="button">Circle</button>
+		<button id="cbutton">Circle</button>
+		<button id="dbutton">DVD</button>
 		<button id="stop">Stop</button>
-		<h3 id="message">Press CIRCLE to begin animation!</h3>
+		<br>
+		<br>
 		<canvas id="playground" style="border:1px solid #000000;" height = "500" width = "500"></canvas>
 		<script src="animate.js"></script>
 	</center>
