--- a/hw04/sandbox-interactive.html
+++ b/hw04/sandbox-interactive.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      SVG Demo 2
-    </title>
-  </head>
-  <body>
-    <svg id="vimage" height="500" width="500" style="border: 1px solid;">
-      <circle cx="250" cy="250" r="75" fill="yellow" stroke="black" />
-      <rect x="100" y="100" width="300" height="75" fill="blue" />
-    </svg>
-  </body>
-  <script src="svg-interactive.js">
-  </script>
+		<title>
+			Animate (SVG)
+		</title>
+	</head>
+  <body>   
+		<center>
+			<svg id="csvg" height="500" width="500" style="border: 1px solid;"></svg>
+			<svg id="dsvg" height="500" width="500" style="border: 1px solid;"></svg>
+			<br>
+			<button id="cbutton" type="button">Circle</button>
+			<button id="dbutton" type="button">DVD</button>
+			<br>
+		</center>
+	</body>
+	<script src="svg-interactive.js">
+	</script>
 </html>
