updated w dvd working

--- a/hw04/index.html
+++ b/hw04/index.html
@@ -14,7 +14,7 @@
 		<center>
 
 			<button id="cbutton" type="button">Circle</button>
-			<!-- <button id="dbutton" type="button">DVD</button> -->
+			<button id="dbutton" type="button">DVD</button>
 			<br><br>
 			<svg id="csvg" height="500" width="500" style="border: 1px solid;"></svg>
 			<!-- <svg id="dsvg" height="500" width="500" style="border: 1px solid;"></svg> -->
