--- a/hw05/index.html
+++ b/hw05/index.html
@@ -2,16 +2,31 @@
 		<head>
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<title>
-						Democratic Primaries
+						2016 Primaries
 				</title>
 				<script src="http://d3js.org/d3.v3.min.js" charset="utf-8">
 				</script>
 		</head>
 		<body>
+				<!-- Derrick's Graph for Republicans -->
+				<h1> Republican Primaries </h1>
 				<p id="rdelegates"></p>
+				<p id="keyhtml"></p>
+				<div class="kchart"></div>
+				<hr>
+				<br>
+				<br>
 				<div class="chart"></div>
 				
+				<hr>
+
+				<!--Rick's Graph for Democrats -->
 				<p id="ddelegates"></p>
+				<p id ="dkeyhtml"></p>
+				<div class="kchart2"></div>
+				<hr>
+				<br>
+				<br>
 				<div class="chart2"></div>
 				</div>
 		</body>
